--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     font-family: "poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: #ffffff;
 }
 
 body {
@@ -10,8 +11,25 @@ body {
     margin: 0;
 }
 
+h2 {
+    font-size: 100px;
+    margin: 0;
+}
+
+p {
+    font-size: 20px;
+}
+
+button {
+    background-color: #0008BE;
+    padding: 0;
+    border-radius: 7px;
+    box-shadow:none;
+    border: none;
+    padding: 2px;
+}
+
 nav {
-    color: #ffffff;
     font-size: 40px;
     display: flex;
     justify-content: space-between;
@@ -49,15 +67,12 @@ nav a {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 120px auto 80px;
     grid-row-gap: 20px;
-    color:#ffffff;
 }
 
 .textgrid h2 {
-    margin: 0;
     grid-row: 1/2;
     grid-column: 1/6;
     text-align: left;
-    font-size: 100px;
 }
 
 .textgrid p {
@@ -65,25 +80,174 @@ nav a {
     grid-row: 2/3;
     grid-column: 1/3;
     text-align: left;
-    font-size: 20px;
 }
 
 .textgrid button {
     grid-row: 3/4;
     grid-column: 1/2;
-    background-color: #0008BE;
-    color: #ffffff;
-    font-family: "megabase", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 40px;
-    padding: 0;
-    border-radius: 10px;
-    box-shadow:none;
-    border: none;
 }
 
 .textgrid button image {
     height: 100%;
     width: 100%;
 }
+
+.abstract_container {
+    margin: 0 100px 100px 100px;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 300px auto 80px;
+}
+
+.abstract_container svg {
+    grid-row: 1/2;
+    grid-column: 1/3;
+}
+
+.abstract_container h2 {
+    grid-row: 1/2;
+    grid-column: 3/7;
+}
+
+.abstract_container p {
+    grid-row: 2/3;
+    grid-column: 1/7;
+    margin: 0;
+}
+
+.abstract_container button {
+    grid-row: 3/4;
+    grid-column: 1/3;
+    background-color: #ffffff;
+}
+
+.poster_container {
+    background-color: #ffffff;
+    text-align: center;
+}
+
+.poster {
+    width: 800px;
+    height: 1100px;
+    background-color: #0008BE;
+    margin: 100px 0;
+}
+
+.poster_text {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 250px;
+    margin: 0 100px;
+    gap: 30px;
+
+}
+
+.poster_text h2 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    color: #0008BE;
+    text-align: left;
+}
+
+.poster_text p {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    color: #0008BE;
+}
+
+.poster_text svg {
+    grid-row: 1/3;
+    grid-column: 2/3;
+}
+
+.gap_div {
+    height: 100px;
+}
+
+.impressum_container {
+    height: 100px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+}
+
+.impressum_container p {
+    color:#0008BE;
+}
+
+
+
+
+.team_container {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    overflow: hidden;
+    
+  }
+  
+  .image-container {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    transform-style: preserve-3d;
+    transform: perspective(1000px) rotateY(0deg);
+    transition: transform 0.7s;
+    top:-200px;
+  }
+  
+  .image-container span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: rotateY(calc(var(--i) * 120deg)) translateZ(400px);
+  }
+  
+  .image-container span img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+  
+  .btn-container {
+    position: relative;
+    bottom: -10vh;
+    width: 80%;
+  }
+  
+  .btn {
+    position: absolute;
+    bottom: -80px;
+    background: #ffffff;
+    color: #0008BE;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  #prev {
+    left: 20%;
+  }
+  
+  #next {
+    right: 20%;
+  }
+  
+  .btn:hover {
+    filter: brightness(1.5);
+  }
+
+  span p{
+    position: relative;
+    bottom: -280px;
+    text-align: left;
+    font-size: 20px;
+  }
